# browser

./: .gitignore  EXAMPLE.md  README.md  SKILL.md  cli.md  package-lock.json  package.json  pyproject.toml  requirements.txt
actions/: browser-client.mjs  browser-server.mjs  browser-server.sh
docs/: visualized_example.csv
src/: browser-server.sh  browser_server.py  cli.py  client.py  server.py
