[project]
name = "browser-agent"
version = "0.1.0"
description = "Interactive Browser Agent CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use",
    "fastapi",
    "uvicorn",
    "typer",
    "httpx",
    "ultralytics>=8.3.241",
]

[project.scripts]
browser = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
